--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-katex": "^3.0.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-katex": "^3.0.0",
     "gh-pages": "^5.0.0"
   }
 }
